--- a/app/src/main/res/layout/choose_area.xml
+++ b/app/src/main/res/layout/choose_area.xml
@@ -27,6 +27,27 @@
             android:background="@drawable/ic_arrow_back_24dp"/>
     </RelativeLayout>
 
+    <LinearLayout
+        android:id="@+id/locLayout"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/loc_text"
+            android:text="@string/autoLocate"
+            android:textSize="16sp"
+            android:textColor="#000"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <ImageView
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:src="@drawable/ic_location_24dp"
+            android:layout_marginTop="10dp"/>
+    </LinearLayout>
+
     <ListView
         android:id="@+id/list_view"
         android:layout_width="match_parent"
